[project]
name = "taiko-priority-fee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "eth-abi>=5.2.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "seaborn>=0.13.2",
    "web3>=7.12.0",
]
